--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -144,8 +144,8 @@ ______             _     _                        _   _                   _
     <ion-item class="ion-no-margin">
       <ion-grid >
         <ion-row >
-          <ion-col size="5"><b>Amount:</b>     </ion-col>
-          <ion-col size="7"><b>&#8369; {{data1 | number}}</b></ion-col>
+          <ion-col size="5" color="danger"><b>Amount:</b>     </ion-col>
+          <ion-col size="7" color="danger"><b>&#8369; {{data1 | number}}</b></ion-col>
         </ion-row>
         <ion-row >
           <ion-col size="5">Pay Venue:     </ion-col>
@@ -159,16 +159,16 @@ ______             _     _                        _   _                   _
     </ion-item>
     <ul>
       <li>
-        <ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
+        <ion-text class="fs-12 ion-text-wrap" color="danger">This is the overall professional fee that will be charged to your patient.</ion-text>
       </li>
       <li>
-        <ion-text class="fs-12 ion-text-wrap">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
+        <ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
       </li>
       <li *ngIf="withVat == 'Yes'">
-        <ion-text class="fs-12 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text>
+        <ion-text class="fs-12 ion-text-wrap" color="danger">VAT percentage will be added to your overall professional fee.</ion-text>
       </li>
       <li *ngIf="withVat == 'No'">
-        <ion-text class="fs-12 ion-text-wrap"> No VAT will be added to your overall professional fee.</ion-text>
+        <ion-text class="fs-12 ion-text-wrap" color="danger"> No VAT will be added to your overall professional fee.</ion-text>
       </li>
   </ul>
   </div>
@@ -466,8 +466,8 @@ ______             _     _                       ______             _
         <ion-item class="ion-no-margin">
           <ion-grid >
             <ion-row >
-              <ion-col size="5"><b>Amount:</b>     </ion-col>
-              <ion-col size="7"><b>&#8369; {{data1 | number}}</b></ion-col>
+              <ion-col size="5" color="danger"><b>Amount:</b>     </ion-col>
+              <ion-col size="7" color="danger"><b>&#8369; {{data1 | number}}</b></ion-col>
             </ion-row>
             <ion-row >
               <ion-col size="5">Pay Venue:     </ion-col>
@@ -481,16 +481,16 @@ ______             _     _                       ______             _
         </ion-item>
         <ul>
           <li>
-            <ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
+            <ion-text class="fs-12 ion-text-wrap" color="danger">This is the overall professional fee that will be charged to your patient.</ion-text>
           </li>
           <li>
-            <ion-text class="fs-12 ion-text-wrap">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
+            <ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
           </li>
           <li *ngIf="withVat == 'Yes'">
-            <ion-text class="fs-12 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text>
+            <ion-text class="fs-12 ion-text-wrap" color="danger">VAT percentage will be added to your overall professional fee.</ion-text>
           </li>
           <li *ngIf="withVat == 'No'">
-            <ion-text class="fs-12 ion-text-wrap"> No VAT will be added to your overall professional fee.</ion-text>
+            <ion-text class="fs-12 ion-text-wrap" color="danger"> No VAT will be added to your overall professional fee.</ion-text>
           </li>
       </ul>
 
