--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -81,16 +81,16 @@
   </ion-item>
   <ul>
     <li>
-      <ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">This is the overall professional fee that will be charged to your patient.</ion-text>
     </li>
     <li>
-      <ion-text class="fs-12 ion-text-wrap">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
     </li>
     <li *ngIf="withVat == 'Yes'">
-      <ion-text class="fs-12 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">VAT percentage will be added to your overall professional fee.</ion-text>
     </li>
     <li *ngIf="withVat == 'No'">
-      <ion-text class="fs-12 ion-text-wrap"> No VAT will be added to your overall professional fee.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger"> No VAT will be added to your overall professional fee.</ion-text>
     </li>
 
 
