--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -65,18 +65,15 @@
 
   
     <div *ngIf="(method=='Insurance')">
+      <img src="assets/img/insurance-pana.png" alt="Care of Insurance">>
       <!-- <img src="assets/img/insurance.png" alt="Care of Insurance"> -->
-      <div align="center">
+      <!-- <div align="center">
         <lottie-player
           src="https://assets4.lottiefiles.com/packages/lf20_pk5mpw6j.json"
-          mode="bounce"
           background="transparent"
-          speed="1"
           style="width: 300px;"
-          loop
-          autoplay
         ></lottie-player>
-      </div>
+      </div> -->
       <ion-card mode="ios" *ngIf="!isDesktop " >
         <ion-item>
           <ion-label>&#8369; </ion-label>
@@ -167,8 +164,9 @@
       <ion-text ></ion-text>
 
       <ion-card mode="ios"  >
+        <img src="assets/img/charity-rafiki.png" alt="Charity Thanks">
         <!-- <img src="assets/img/charity.png" alt="Charity Thanks"> -->
-        <div align="center">
+        <!-- <div align="center">
           <lottie-player
             src="https://assets4.lottiefiles.com/packages/lf20_wMezg6.json"
             mode="bounce"
@@ -178,7 +176,7 @@
             loop
             autoplay
           ></lottie-player>
-        </div>
+        </div> -->
         <ion-item>
           <ion-label class="ion-text-wrap" >Thank you for your generosity, Dok! &#10084; We truly appreciate your kindness and heartfelt service!</ion-label> 
 
