Fix extra char in html.

--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -65,7 +65,7 @@
 
   
     <div *ngIf="(method=='Insurance')">
-      <img src="assets/img/insurance-pana.png" alt="Care of Insurance">>
+      <img src="assets/img/insurance-pana.png" alt="Care of Insurance">
       <!-- <img src="assets/img/insurance.png" alt="Care of Insurance"> -->
       <!-- <div align="center">
         <lottie-player
