added UI changes

--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.scss
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.scss
@@ -61,3 +61,10 @@
     font-size: x-large;
     font-weight: 900;
   }
+
+  .lineheight-80{
+    line-height: 80%;
+  }
+  .paddingtop-10{
+    padding-top: 10px;
+  }
