--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -87,13 +87,13 @@
         </ion-item>
       </ion-card>
 
-      <ul *ngIf="txtInsurancePF"><li> <ion-text class="fs-12 ion-text-wrap" color="danger">Accept HMO insurance rate. </ion-text></li><li><ion-text class="fs-12 ion-text-wrap" color="danger">No additional professional fee charge to your patient.</ion-text></li></ul>
+      <ul *ngIf="txtInsurancePF"><li class="lineheight-80"> <ion-text class="fs-12 ion-text-wrap" color="danger">Accept HMO insurance rate. </ion-text></li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">No additional professional fee charge to your patient.</ion-text></li></ul>
                          
-      <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==true"><li><ion-text class="fs-12 ion-text-wrap" color="danger">This is the overall professional fee that will be charged to your patient. </ion-text>
-      </li><li><ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fs-12 ion-text-wrap" color="danger">VAT percentage will be added to your overall professional fee.</ion-text></li></ul>
+      <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==true"><li class="lineheight-80"><ion-text class="fs-12 ion-text-wrap" color="danger">This is the overall professional fee that will be charged to your patient. </ion-text>
+      </li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">VAT percentage will be added to your overall professional fee.</ion-text></li></ul>
 
-      <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==false"><li><ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
-      </li><li><ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fs-12 ion-text-wrap" color="danger">No VAT will be added to your overall professional fee.</ion-text></li></ul>
+      <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==false"><li class="lineheight-80 "><ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
+      </li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">No VAT will be added to your overall professional fee.</ion-text></li></ul>
 
  
 
@@ -123,34 +123,34 @@
       </ion-card>
 
       <ul *ngIf="txtPhilHealthPF">
-        <li>
+        <li class="lineheight-80 ">
           <ion-text class="fs-12 ion-text-wrap" color="danger">Accept PHIC rate.</ion-text>
         </li>
-        <li>
+        <li class="lineheight-80 paddingtop-10">
           <ion-text class="fs-12 ion-text-wrap" color="danger">No additional professional fee charge to your patient.</ion-text>
         </li>
       </ul>
 
       <ul *ngIf="!txtPhilHealthPF && txtPhilHealthVAT">
-        <li>
+        <li class="lineheight-80 ">
           <ion-text class="fs-12 ion-text-wrap" color="danger">This is the overall professional fee that will be charged to your patient.</ion-text>
         </li>
-        <li>
+        <li class="lineheight-80 paddingtop-10">
           <ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
         </li>
-        <li>
+        <li class="lineheight-80 paddingtop-10">
           <ion-text class="fs-12 ion-text-wrap" color="danger">VAT percentage will be added to your overall professional fee.</ion-text>
         </li>
       </ul>
 
       <ul *ngIf="!txtPhilHealthPF && !txtPhilHealthVAT">
-        <li>
+        <li class="lineheight-80 ">
           <ion-text class="fs-12 ion-text-wrap" color="danger">This is the overall professional fee that will be charged to your patient.</ion-text>
         </li>
-        <li>
+        <li class="lineheight-80 paddingtop-10">
           <ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
         </li>
-        <li>
+        <li class="lineheight-80 paddingtop-10">
           <ion-text class="fs-12 ion-text-wrap" color="danger">No VAT will be added to your overall professional fee.</ion-text>
         </li>
       </ul>
@@ -193,6 +193,7 @@
 
   <ion-footer  *ngIf="!isDesktop">
     <ion-toolbar>
+      <ion-item lines="none">
       <ion-grid class="ion-no-padding">
         <ion-row>
           <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
@@ -221,6 +222,7 @@
           <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
         </ion-row>
       </ion-grid>
+      </ion-item>
     </ion-toolbar>
   </ion-footer>
 
@@ -383,40 +385,66 @@ ______          _    _
                   </ion-item>
                 </ion-card>
     
-                <ul *ngIf="txtInsurancePF"><li> <ion-text class="fs-12 ion-text-wrap" color="danger">Accept HMO insurance rates. </ion-text></li><li><ion-text class="fs-12 ion-text-wrap" color="danger">No additional professional fee charge to your patient.</ion-text></li></ul>
+                <ul *ngIf="txtInsurancePF"><li class="lineheight-80"> <ion-text class="fs-12 ion-text-wrap" color="danger">Accept HMO insurance rate. </ion-text></li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">No additional professional fee charge to your patient.</ion-text></li></ul>
                          
-                <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==true"><li><ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient. </ion-text>
-                </li><li><ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fs-12 ion-text-wrap" color="danger">VAT percentage will be added to your overall professional fee.</ion-text></li></ul>
+                <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==true"><li class="lineheight-80"><ion-text class="fs-12 ion-text-wrap" color="danger">This is the overall professional fee that will be charged to your patient. </ion-text>
+                </li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">VAT percentage will be added to your overall professional fee.</ion-text></li></ul>
           
-                <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==false"><li><ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
-                </li><li><ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fs-12 ion-text-wrap" color="danger">No VAT will be added to your overall professional fee.</ion-text></li></ul>
+                <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==false"><li class="lineheight-80 "><ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
+                </li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">No VAT will be added to your overall professional fee.</ion-text></li></ul>
+          
+           
           
          
               </div>
                   
               
               <div *ngIf="(method=='Philhealth')">
-                <ion-card mode="ios">
+                <ion-card mode="ios" >
                   <ion-item>
-                    <ion-label>PhilHealth Only?</ion-label> 
-                    <ion-checkbox color="mango"  [(ngModel)]="IsPhilhealthOnly" (ionChange)="isPhilhealthOnly()"></ion-checkbox>
+                    <ion-label>Accept PhilHealth Only?</ion-label> 
+                    <ion-checkbox color="mango" checked="false" [(ngModel)]="IsPhilhealthOnly" (ionChange)="isPhilhealthOnly()"></ion-checkbox>
                   </ion-item>
                 </ion-card>
                 <ion-card mode="ios" *ngIf="PhilhealthShowValue" >
                   <ion-item>
                     <ion-label>&#8369; </ion-label>
-                    <ion-input color="danger" type="number" placeholder="0" [(ngModel)]="PhilhealthPF"  (ionChange)="philhealthPF()"></ion-input>
+                    <ion-input color="danger" type="number" minlength="0" placeholder="0" [(ngModel)]="PhilhealthPF"  (ionChange)="philhealthPF()"></ion-input>
                   </ion-item>
                 </ion-card>
           
                 <ion-card mode="ios" *ngIf="PhilhealthShowVat" >
                   <ion-item>
                     <ion-label>Add VAT?</ion-label> 
-                    <ion-checkbox color="mango"  [(ngModel)]="PhilhealthVat"></ion-checkbox>
+                    <ion-checkbox color="mango" checked="false" [(ngModel)]="PhilhealthVat" (ionChange)="philhealthVat()"></ion-checkbox>
                   </ion-item>
                 </ion-card>
+          
+                <ul *ngIf="txtPhilHealthPF"><li class="lineheight-80 "><ion-text class="fs-12 ion-text-wrap" color="danger">Accept PHIC rate.</ion-text></li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">No additional professional fee charge to your patient.</ion-text></li></ul>
+          
+                <ul *ngIf="!txtPhilHealthPF && txtPhilHealthVAT"><li class="lineheight-80 "><ion-text class="fs-12 ion-text-wrap" color="danger">This is the overall professional fee that will be charged to your patient.</ion-text></li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text></li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">VAT percentage will be added to your overall professional fee.</ion-text></li></ul>
+          
+                <ul *ngIf="!txtPhilHealthPF && !txtPhilHealthVAT"><li class="lineheight-80 "><ion-text class="fs-12 ion-text-wrap" color="danger">This is the overall professional fee that will be charged to your patient.</ion-text></li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text></li>
+                  <li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">No VAT will be added to your overall professional fee.</ion-text></li></ul>
+          
+                
               </div>
 
+              <div *ngIf="(method=='Charity')">
+
+                <ion-text ></ion-text>
+          
+                <ion-card mode="ios"  >
+                  <img src="assets/img/charity-rafiki.png" alt="Charity Thanks">
+                  <ion-item>
+                    <ion-label class="ion-text-wrap" >Thank you for your generosity, Dok! &#10084; We truly appreciate your kindness and heartfelt service!</ion-label> 
+          
+                  </ion-item>
+                </ion-card>
+          
+          
+              </div>
+          
               <ion-button color="mango" size="default" expand="block" shape="round" (click)="finishTransaction()" *ngIf="summary != 'summary'">
                 Save
               </ion-button>
