--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -38,8 +38,11 @@
 
 <ion-content>
   <img src="assets/img/online-transactions.png">
-  <ion-item lines="none" class="ion-no-margin"><b>Patient Details</b></ion-item>
-  <ion-item class="ion-no-margin">
+  <ion-item lines="none" class="ion-no-margin"><b>Patient Details</b>  
+    <ion-badge color="warning" slot="end" (click)="moreorless(true)" *ngIf="moreOrLess">more..</ion-badge>
+    <ion-badge color="warning" slot="end" (click)="moreorless(false)" *ngIf="!moreOrLess">less..</ion-badge>
+  </ion-item>
+  <ion-item class="ion-no-margin" *ngIf="!moreOrLess">
     <ion-grid *ngFor="let x of data">
       <ion-row >
         <ion-col size="5"><b>Name:</b>     </ion-col>
@@ -63,11 +66,34 @@
       </ion-row>     
     </ion-grid>
   </ion-item>
+  <ion-item class="ion-no-margin" *ngIf="moreOrLess">
+    <ion-grid *ngFor="let x of data">
+      <ion-row >
+        <ion-col size="5"><b>Name:</b>     </ion-col>
+        <ion-col size="7"><b>{{x.first_name}} {{x.middle_name}}. {{x.last_name}}</b></ion-col>
+      </ion-row>
+      <ion-row >
+        <ion-col size="12">{{site}} | {{x.room_no}}</ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-item>
   <ion-item class="ion-no-margin">
     <ion-grid >
       <ion-row >
-        <ion-col size="5" ><b>Amount:</b>     </ion-col>
-        <ion-col size="7"><b>&#8369; {{data1 | number}}</b></ion-col>
+        <ion-col size="5" >
+          <b>
+            <ion-text color="danger">
+              Amount:
+            </ion-text>
+          </b>
+        </ion-col>
+        <ion-col size="7">
+          <b>
+            <ion-text color="danger">
+              &#8369; {{data1 | number}}
+            </ion-text>
+          </b>
+        </ion-col>
       </ion-row>
       <ion-row >
         <ion-col size="5">Pay Venue:     </ion-col>
@@ -79,23 +105,37 @@
       </ion-row>    
     </ion-grid>
   </ion-item>
-  <ul>
-    <li>
+  <ul *ngIf="data1 <= 0 ">
+    <li  class="lineheight-80">
       <ion-text class="fs-12 ion-text-wrap" color="danger">This is the overall professional fee that will be charged to your patient.</ion-text>
     </li>
-    <li>
+    <li  class="lineheight-80  paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
     </li>
-    <li *ngIf="withVat == 'Yes'">
+    <li *ngIf="withVat == 'Yes'"  class="lineheight-80  paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger">VAT percentage will be added to your overall professional fee.</ion-text>
     </li>
-    <li *ngIf="withVat == 'No'">
+    <li *ngIf="withVat == 'No'"  class="lineheight-80  paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"> No VAT will be added to your overall professional fee.</ion-text>
     </li>
+  </ul>
+  <ul *ngIf="data1 > 0 ">
+    <li  class="lineheight-80">
+      <ion-text class="fs-12 ion-text-wrap" color="danger">This is the overall professional fee that will be charged to your patient.</ion-text>
+    </li>
+    <li  class="lineheight-80  paddingtop-10">
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
+    </li>
+    <li *ngIf="withVat == 'Yes'"  class="lineheight-80  paddingtop-10">
+      <ion-text class="fs-12 ion-text-wrap" color="danger">VAT percentage will be added to your overall professional fee.</ion-text>
+    </li>
+    <li *ngIf="withVat == 'No'"  class="lineheight-80  paddingtop-10">
+      <ion-text class="fs-12 ion-text-wrap" color="danger"> No VAT will be added to your overall professional fee.</ion-text>
+    </li>
+  </ul>
 
 
-   
-</ul>
+
 <ion-button *ngIf="isDesktop" color="mango" size="default" expand="block" shape="round" (click)="postSummary()">Submit</ion-button>
 
 </ion-content>
@@ -105,6 +145,7 @@
 
 <ion-footer *ngIf="!isDesktop">
   <ion-toolbar>
+    <ion-item lines="none">
     <ion-grid class="ion-no-padding">
       <ion-row>
         <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
@@ -124,6 +165,7 @@
         <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
       </ion-row>
     </ion-grid>
+    </ion-item>
   </ion-toolbar>
 
 </ion-footer>
