Emphasize PF amount in Case Rates result set.

--- a/src/app/pages/case-rates/case-rates.page.html
+++ b/src/app/pages/case-rates/case-rates.page.html
@@ -61,7 +61,7 @@
       <ion-label>
         <h2 class="ion-text-wrap">{{x.case_desc}}</h2>
         <h3 class="ion-text-wrap" slot="end">Case Code : {{x.case_code}}</h3>
-        <h3 class="ion-text-wrap">PF : {{x.case_pf  | number}}</h3>
+        <ion-badge><h3 class="ion-text-wrap"><b>PF : {{x.case_pf  | number}}</b></h3></ion-badge>
       </ion-label>
     </ion-item>
   </ion-list>
