--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -100,7 +100,7 @@ ______             _     _                        _   _                   _
         </ion-row>
         <ion-row>
           <ion-col size="5">Pay Venue: </ion-col>
-          <ion-col size="7">{{payvenue}}</ion-col>
+          <ion-col size="7"><ion-badge>{{payvenue}}</ion-badge></ion-col>
         </ion-row>
         <ion-row>
           <ion-col size="5">Add VAT?: </ion-col>
@@ -360,7 +360,7 @@ ______             _     _                       ______             _
               </ion-row>
               <ion-row>
                 <ion-col size="5">Pay Venue: </ion-col>
-                <ion-col size="7">{{payvenue}}</ion-col>
+                <ion-col size="7"><ion-badge>{{payvenue}}</ion-badge></ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="5">Add VAT?: </ion-col>
