--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -97,7 +97,7 @@
       </ion-row>
       <ion-row >
         <ion-col size="5">Pay Venue:     </ion-col>
-        <ion-col size="7">{{payvenue}}</ion-col>
+        <ion-col size="7"><ion-badge>{{payvenue}}</ion-badge></ion-col>
       </ion-row>
       <ion-row >
         <ion-col size="5">Add VAT?:     </ion-col>
