Cleanup status progress and emphasis on overall professional fee statement.

--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -92,7 +92,7 @@
       <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==true"><li class="lineheight-80"><ion-text class="fs-12 ion-text-wrap" color="danger">This is the overall professional fee that will be charged to your patient. </ion-text>
       </li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">VAT percentage will be added to your overall professional fee.</ion-text></li></ul>
 
-      <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==false"><li class="lineheight-80 "><ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
+      <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==false"><li class="lineheight-80"><ion-text class="fs-12 ion-text-wrap" color="danger">This is the overall professional fee that will be charged to your patient.</ion-text>
       </li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li class="lineheight-80 paddingtop-10"><ion-text class="fs-12 ion-text-wrap" color="danger">No VAT will be added to your overall professional fee.</ion-text></li></ul>
 
  
