updated images & updated desktop version

--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.scss
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.scss
@@ -68,3 +68,10 @@
   .paddingtop-10{
     padding-top: 10px;
   }
+
+  .ripple-parent {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .vertical-center{ display: flex; align-items: center; justify-content: center; height: 100%; }
