--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -80,7 +80,7 @@ ___  ___        _      _  _
 
 
 
-  <ion-card mode="ios"  *ngIf="!isDesktop" >
+  <!-- <ion-card mode="ios"  *ngIf="!isDesktop" >
     <ion-list>
       <ion-item style="padding-top: 10px;">
         <div class="ion-text-wrap"><b>Lab Tests</b><br /></div>
@@ -142,7 +142,7 @@ ___  ___        _      _  _
               </div>
           </div>
     </ion-list>
-  </ion-card>
+  </ion-card> -->
 
 
 
@@ -215,7 +215,7 @@ ______          _    _
 
 
 
-  <ion-fab horizontal="end" vertical="top" slot="fixed" edge>
+  <!-- <ion-fab horizontal="end" vertical="top" slot="fixed" edge>
     <ion-fab-button>
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
@@ -230,7 +230,7 @@ ______          _    _
         <ion-icon name="logo-vimeo"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
-  </ion-fab>
+  </ion-fab> -->
 
 
 
