--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -37,7 +37,7 @@
 
 
 <ion-content>
-  <img src="assets/img/online-transactions.png">
+  <img *ngIf="!isDesktop" src="assets/img/online-transactions.png">
   <ion-item lines="none" class="ion-no-margin"><b>Patient Details</b>  
     <ion-badge color="warning" slot="end" (click)="moreorless(true)" *ngIf="moreOrLess">more..</ion-badge>
     <ion-badge color="warning" slot="end" (click)="moreorless(false)" *ngIf="!moreOrLess">less..</ion-badge>
@@ -90,7 +90,7 @@
         <ion-col size="7">
           <b>
             <ion-text color="danger">
-              &#8369; {{data1 | number}}
+              &#8369; {{data1 | number}} | <i>{{withVat}}</i>
             </ion-text>
           </b>
         </ion-col>
@@ -99,10 +99,10 @@
         <ion-col size="5">Pay Venue:     </ion-col>
         <ion-col size="7"><ion-badge>{{payvenue}}</ion-badge></ion-col>
       </ion-row>
-      <ion-row >
+      <!-- <ion-row >
         <ion-col size="5">Add VAT?:     </ion-col>
         <ion-col size="7">{{withVat}}</ion-col>
-      </ion-row>    
+      </ion-row>     -->
     </ion-grid>
   </ion-item>
   <ul *ngIf="data1 <= 0 ">
@@ -136,11 +136,15 @@
 
 
 
-<ion-button *ngIf="isDesktop" color="mango" size="default" expand="block" shape="round" (click)="postSummary()">Submit</ion-button>
+
 
 </ion-content>
 
-
+<ion-footer *ngIf="isDesktop">
+  <ion-toolbar>
+    <ion-button *ngIf="isDesktop" color="mango" size="default" expand="block" shape="round" (click)="postSummary()">Submit</ion-button>
+  </ion-toolbar>
+</ion-footer>
 
 
 <ion-footer *ngIf="!isDesktop">
@@ -159,7 +163,7 @@
         <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
         <ion-col size-xs="12" size-md="4" size-lg="4">
           
-          <ion-button color="mango" size="default" expand="block" shape="round" (click)="postSummary()">Submit</ion-button>
+          <ion-button color="mango" size="default" expand="block" shape="round" (click)="postSummary()" [disabled]="disableSubmit">Submit</ion-button>
         </ion-col>
         <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
       </ion-row>
