--- a/src/app/pages/case-rates/case-rates.page.html
+++ b/src/app/pages/case-rates/case-rates.page.html
@@ -13,12 +13,8 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
 <!-- <app-chh-app-desktop-navigation *ngIf="isDesktop"></app-chh-app-desktop-navigation> -->
- 
-
-<ion-content >
-
+<ion-content *ngIf="ccCase=='first'">
   <div class=" custom-skeleton" *ngIf="ionSkeleton">
   <ion-list >
     <ion-item >
@@ -38,9 +34,7 @@
         </ion-label>
       </ion-item>
   </ion-list>
-
   </div>
-
   <div  *ngIf ="ionNoData">
     <img src="assets/img/3973477-no-data-concept-illustration-custom.png">
     <div class="ion-text-center">
@@ -49,15 +43,12 @@
   </div>
   <div  *ngIf ="ionStart">
     <div class="ion-text-center">
-      <!-- <br /> <br /> <br /> <br /> -->
       <img src="assets/img/hunt-rafiki.png" alt="Search">
       <h3>Search to see case rates</h3>
     </div>
   </div>
-
-
   <ion-list >
-    <ion-item *ngFor="let x of caseRateResponse" >
+    <ion-item *ngFor="let x of caseRateResponse_first" >
       <ion-label>
         <h2 class="ion-text-wrap">{{x.case_desc}}</h2>
         <h3 class="ion-text-wrap" slot="end">Case Code : {{x.case_code}}</h3>
@@ -65,55 +56,51 @@
       </ion-label>
     </ion-item>
   </ion-list>
-  <!-- <div *ngIf="isDesktop">
-    <ion-grid class="ion-no-padding" >
-      <ion-row>
-        <ion-col  size-md="1"></ion-col>
-        <ion-col  size-md="2">
-          <ion-segment (ionChange)="segmentChanged($event)" mode="ios" [(ngModel)]="caseRateData.case_class" color="mango">
-            <ion-segment-button value="first">
-              <ion-label>1st Case</ion-label>
-            </ion-segment-button>
-            <ion-segment-button value="second">
-              <ion-label>2nd Case</ion-label>
-            </ion-segment-button>
-          </ion-segment>
-          <ion-item>
-            <ion-label position="floating">Code : </ion-label>
-            <ion-input [(ngModel)]="caseRateData.case_search_code"></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="floating">Description : </ion-label>
-            <ion-input [(ngModel)]="caseRateData.case_search_desc"></ion-input>
-          </ion-item>
-          <ion-button
-          color="mango"
-          size="default"
-          expand="block"
-          shape="round"
-          (click)="search()"
-          >Search</ion-button
-          >
-        </ion-col>
-        <ion-col size-md="8">
-          <ion-item *ngFor="let x of caseRates" >
-            <ion-label>
-              <h2 class="ion-text-wrap">{{x.case_desc}}</h2>
-              <h3 class="ion-text-wrap">Case Code : {{x.case_code}}</h3>
-              <h3 class="ion-text-wrap">PF : {{x.case_pf}}</h3>
-            </ion-label>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </div> -->
-
+</ion-content>
+<ion-content *ngIf="ccCase=='second'">
+  <div class=" custom-skeleton" *ngIf="ionSkeleton1">
+  <ion-list >
+    <ion-item >
+      <ion-label>
+        <h2 class="ion-text-wrap"><ion-skeleton-text animated></ion-skeleton-text></h2>
+        <h3 class="ion-text-wrap"><ion-skeleton-text animated style="width: 88%"></ion-skeleton-text></h3>
+        <h3 class="ion-text-wrap"><ion-skeleton-text animated style="width: 70%"></ion-skeleton-text></h3>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+    <ion-list >
+      <ion-item >
+        <ion-label>
+          <h2 class="ion-text-wrap"><ion-skeleton-text animated style="width: 40%"></ion-skeleton-text></h2>
+          <h3 class="ion-text-wrap"><ion-skeleton-text animated style="width: 30%"></ion-skeleton-text></h3>
+          <h3 class="ion-text-wrap"><ion-skeleton-text animated style="width: 70%"></ion-skeleton-text></h3>
+        </ion-label>
+      </ion-item>
+  </ion-list>
+  </div>
+  <div  *ngIf ="ionNoData1">
+    <img src="assets/img/3973477-no-data-concept-illustration-custom.png">
+    <div class="ion-text-center">
+      <h3>No results found</h3>
+    </div>
+  </div>
+  <div  *ngIf ="ionStart1">
+    <div class="ion-text-center">
+      <img src="assets/img/hunt-rafiki.png" alt="Search">
+      <h3>Search to see case rates</h3>
+    </div>
+  </div>
+  <ion-list >
+    <ion-item *ngFor="let x of caseRateResponse_second" >
+      <ion-label>
+        <h2 class="ion-text-wrap">{{x.case_desc}}</h2>
+        <h3 class="ion-text-wrap" slot="end">Case Code : {{x.case_code}}</h3>
+        <ion-badge><h3 class="ion-text-wrap"><b>PF : {{x.case_pf  | number}}</b></h3></ion-badge>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
 <ion-footer  class="ion-no-border" color="mango" >
-
-
-
-
   <ion-segment (ionChange)="segmentChanged($event)" mode="ios" [(ngModel)]="caseRateData.CaseClass" color="mango">
     <ion-segment-button value="first">
       <ion-label>1st Case</ion-label>
@@ -147,11 +134,4 @@
       <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
     </ion-row>
   </ion-grid>
-
-
-
-
 </ion-footer>
-
-
-
