--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -46,10 +46,6 @@ ___  ___        _      _  _
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
-
-
-
   <ion-content *ngIf="!isDesktop">
     <app-chh-app-patient-header
       [data]="data"
@@ -73,13 +69,6 @@ ___  ___        _      _  _
       [finalDiagnosis1]="finalDiagnosis1"
       [finalDiagnosis2]="finalDiagnosis2"
     ></app-chh-app-final-diagnosis>
-  
-
-
-
-
-
-
   <!-- <ion-card mode="ios"  *ngIf="!isDesktop" >
     <ion-list>
       <ion-item style="padding-top: 10px;">
@@ -143,29 +132,12 @@ ___  ___        _      _  _
           </div>
     </ion-list>
   </ion-card> -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <app-chh-app-list-of-doctors  
       [coDoctors]="coDoctors"
       [objecthandler]="objecthandler"
       [isFetchDone]="isFetchDone">
     </app-chh-app-list-of-doctors>
   </ion-content>
-
-
-
 <!--
 ______          _    _              
 |  _  \        | |  | |             
@@ -176,15 +148,7 @@ ______          _    _
                              | |    
                              |_|    
 -->
-
 <app-chh-app-desktop-navigation *ngIf="isDesktop"></app-chh-app-desktop-navigation>
- 
-
-
-
-
-
-
 <ion-content *ngIf="isDesktop">
   <!-- <ul class="breadcrumb" >
     <li>
@@ -197,24 +161,6 @@ ______          _    _
     </li>
 
   </ul>    -->
-
-
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <!-- <ion-fab horizontal="end" vertical="top" slot="fixed" edge>
     <ion-fab-button>
       <ion-icon name="add"></ion-icon>
@@ -231,62 +177,17 @@ ______          _    _
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab> -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <ion-grid class="ion-no-padding" >
       <ion-row>
         <ion-col size-md="1"></ion-col>
         <ion-col size-md="3">
-
-
               <app-chh-app-admitting-diagnosis
                 [admittingDiagnosis]="admittingDiagnosis"
                 [admittingDiagnosis1]="admittingDiagnosis1"
                 [admittingDiagnosis2]="admittingDiagnosis2"
                 [truncating1]="truncating1"
             ></app-chh-app-admitting-diagnosis>
-
-  
             <app-chh-app-card-newline *ngIf="admittingDiagnosis"></app-chh-app-card-newline>
-
-
-
-
               <app-chh-app-final-diagnosis
                 [data]="data"
                 [finalDiagnosis]="finalDiagnosis"
@@ -295,16 +196,11 @@ ______          _    _
                 [finalDiagnosis1]="finalDiagnosis1"
                 [finalDiagnosis2]="finalDiagnosis2"
               ></app-chh-app-final-diagnosis>
-
-
-
-       
         </ion-col>
         <ion-col  size-md="4"  >
           <!--app-chh-app-card-newline></app-chh-app-card-newline-->
           <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted">
           </app-chh-app-patient-header>
-
             <ion-button
             color="mango"
               size="default"
@@ -312,7 +208,7 @@ ______          _    _
               shape="round"
               (click)="redirecttoPF()"
               *ngIf="data.is_posted == 0 || data.is_posted == null"
-              >Professional Fee</ion-button>
+              ><ion-icon name="checkmark-done-outline" *ngIf="checkmark"></ion-icon>Professional Fee</ion-button>
 
         </ion-col>
 
@@ -325,36 +221,11 @@ ______          _    _
          
         </ion-col>
         <ion-col size-md="1"></ion-col>
-
-
-
-        
       </ion-row>
     </ion-grid>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- <ion-grid class="ion-no-padding" >
     <ion-row>
       <ion-col size="3" >
-       
      </ion-col>
       <ion-col size="2" class=" border-left">
         <div >
@@ -414,25 +285,7 @@ ______          _    _
       </ion-col>
     </ion-row>
   </ion-grid> -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </ion-content>
-
 <ion-footer  >
   <ion-toolbar *ngIf="!isDesktop">
     <ion-item lines="none">
@@ -440,17 +293,14 @@ ______          _    _
       <ion-row >
         <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
         <ion-col size-xs="12" size-md="4" size-lg="4">
-          
           <ion-button
-
-          color="mango"
+            color="mango"
             size="default"
             expand="block"
             shape="round"
             (click)="redirecttoPF()"
             *ngIf="data.is_posted == 0 || data.is_posted == null"
-    
-            >Professional Fee</ion-button
+            ><ion-icon name="checkmark-done-outline" *ngIf="checkmark"></ion-icon>Professional Fee</ion-button
           >
         </ion-col>
         <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
@@ -462,19 +312,6 @@ ______          _    _
     <span>{{this.constants.CHH_NAME__VALUE__CEBU}}</span>
   </div>
 </ion-footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
   <!-- 
 ooooooooo.                       .o88o.    oooooooooooo                    
 `888   `Y88.                     888 `"    `888'     `8                    
@@ -568,9 +405,6 @@ o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P'
   </ion-label>
 </ion-item>
 </ion-card>
-
-
-
 <ion-card>
 <ion-item lines="none">
   <ion-avatar slot="start">
@@ -607,10 +441,6 @@ o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P'
     </ion-row> 
   </ion-label>
 </ion-item>
-
-
-
-
 <ion-card-content>
   <h3>{{data.Doctor_Status}}</h3>
   {{data.admission_status}}<br />
@@ -634,8 +464,6 @@ o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P'
 
 </ion-card>
 -->
-
-
 <!--ion-card>
 <ion-item>
   <ion-avatar slot="start">
@@ -646,13 +474,9 @@ o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P'
     <p>Dec 10, 2019</p>
   </ion-label>
 </ion-item>
-
-
-
 <ion-card-content>
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus iaculis mollis ligula sed ultrices.
 </ion-card-content-->
-
 <!--ion-footer>
   <ion-row>
     <ion-col center text-center>
@@ -676,26 +500,7 @@ o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P'
   </ion-row>
 </ion-footer>
 </ion-card-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!--
-
 <ion-grid ion-grid-width-md *ngIf="isDesktop">
   <ion-row > 
     <ion-col size="12" size-sm >
@@ -882,11 +687,7 @@ o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P'
     
   </ion-row>
 </ion-grid>
-
-
-
 <ion-grid ion-grid-width-md *ngIf="isDesktop">
-
         <ion-col>
           <ion-row>
             <ion-col size="3" class="max-height-500 overflow-scroll">
@@ -1022,39 +823,6 @@ o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P'
         </ion-col>
       </ion-grid>
     -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!--
     <ion-row>
       <ion-col size="3" >
@@ -1104,8 +872,6 @@ o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P'
             </ion-item>
           </ion-list>  
         </div>
-
-
       </ion-col>
       <ion-col size="3" >
                   <div class="max-height-73vh overflow-scroll">
@@ -1270,9 +1036,6 @@ o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P'
                 </div>
       </ion-col>
       <ion-col size="1"></ion-col>
-
-
-
     </ion-row>
   -->
 
